added links on posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,27 @@
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
     {%- endif -%}
+    <style type="text/css">
+      .post-nav {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
+.post-nav p {
+    flex: 1 1 0;
+    width: 45%;
+}
+
+.post-nav p:first-child {
+    padding-right: 0.5em;
+}
+
+.post-nav p:last-child {
+    padding-left: 0.5em;
+    text-align: right;
+}
+    </style>
   </head>
   <body>
 
